--- a/frontend/src/table.css
+++ b/frontend/src/table.css
@@ -4,36 +4,11 @@
   text-overflow: ellipsis;
 }
 
-.log-row td {
+.log-row .ant-table-cell {
   white-space: nowrap;
   height: 48px;
   line-height: 48px;
   padding: 0 12px;
-}
-
-.logs-table table {
-  table-layout: fixed !important;
-}
-
-.logs-table td {
-  white-space: nowrap !important;
   overflow: hidden;
   text-overflow: ellipsis;
-}
-
-.logs-table .arco-table-tr {
-  height: 48px !important;
-  line-height: 48px !important;
-}
-
-.arco-table-element {
-  table-layout: fixed !important;
-  width: 100% !important;
-}
-
-.arco-table-element td,
-.arco-table-element th {
-  white-space: nowrap !important;
-  overflow: hidden !important;
-  text-overflow: ellipsis !important;
 }
